--- a/src/components/organisms/FullScreenCertificate/_components.fullscreen-certificate.scss
+++ b/src/components/organisms/FullScreenCertificate/_components.fullscreen-certificate.scss
@@ -55,6 +55,7 @@
 }
 
 .buv-c-fullscreen-certificate__close {
+  top: 27px;
   right: 20px;
 }
 
